--- a/css/seaction.css
+++ b/css/seaction.css
@@ -6,7 +6,7 @@
     display: grid;
     margin: 50px auto;
     grid-template-columns: repeat(auto-fit, minmax(305px, 1fr));
-    grid-template-rows: repeat(2 , minmax(240px  , 1fr));
+    grid-template-rows: repeat(2 , minmax(210px  , 1fr));
     grid-row-gap: 30px;
     grid-column-gap: 30px;
     grid-auto-rows: minmax(150px, 1fr);
@@ -75,9 +75,11 @@
 }
 .seaction__content  h3{
        padding-bottom: 1%;
+       font-weight: bold;
+       font-size: 1.8rem;
 }
 .seaction__content-p{
 
    margin:  auto;
-   width: 70%;
+   width: 50%;
 }
