--- a/css/seaction.css
+++ b/css/seaction.css
@@ -38,7 +38,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
- 
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+   border-top-right-radius: 12px;
     /* justify-content: space-evenly; */
   
 
