--- a/css/header.css
+++ b/css/header.css
@@ -41,8 +41,10 @@
     .header{
 
         padding-top: 100px;
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 20px;
+        padding-right: 20px;
+        max-height: 100vh;
+        /* height: auto; */
 
     }
     .header-title {
