--- a/css/services.css
+++ b/css/services.css
@@ -6,6 +6,21 @@
     text-align: center;
     flex-direction: column;
 }
+.about{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.about h3 {
+        font-size: 1.8rem;
+}
+.about h4 {
+    font-size: 2.1rem;
+}
 
 .serice_img {
   
@@ -36,6 +51,7 @@
 }
 .service__content p {
     font-size: 20px;
+    
 }
 .service__content h3 {
 font-size: 2.1rem ;
