--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,4 @@
 .header{
-
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(to right, #470341, rgb(20, 19, 19), #270224);
@@ -7,9 +6,7 @@
     box-shadow: 10 1px 8px #fff;
     display:flex;
     align-items: center;
-    justify-content: center;
-
-    
+    justify-content: center;    
 }
 .header-title{
     font-size: 3.1rem;
@@ -19,6 +16,7 @@
 }
 .header-img{
     width: 100%;
+    pointer-events: none;
 }
 .header-content {
 
